# mgnify-bgcs-common-core

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  pyproject.toml
.github/workflows/: release-please.yml
config/: worker_template.yaml
src/common_core/: config_loader.py  helpers.py  logging_setup.py  versioning.py  worker_template.py
src/mgnify_bgcs_common_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
